# groundfetch

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/groundfetch/: SKILL.md
skills/groundfetch/agents/: openai.yaml
src/groundfetch/: __init__.py  __main__.py  cli.py  core.py
tests/: test_core.py
