[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groundfetch"
version = "0.1.0"
description = "Lightweight grounded web search for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "clavulin", email = "clavulin@users.noreply.github.com" }
]
keywords = ["grounded-search", "gemini", "google-search", "codex", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/clavulin/groundfetch"
Repository = "https://github.com/clavulin/groundfetch"

[project.scripts]
groundfetch = "groundfetch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/groundfetch"]
